--- a/01. PARTIE LEGISLATIVE/Article L6432-3 - 28743785.md
+++ b/01. PARTIE LEGISLATIVE/Article L6432-3 - 28743785.md
@@ -3,22 +3,24 @@
 I. ― Sont passibles d'une amende administrative dont le montant ne peut excéder 3 000 € pour une personne physique et 15 000
 € pour une personne morale les manquements à l'article 23 du règlement (CE) n° 1008/2008 du Parlement européen et du Conseil,
 du 24 septembre 2008, établissant des règles communes pour l'exploitation de services aériens dans la Communauté (refonte)
-qui ont été constatés dans les conditions prévues au III de l'article L. 141-1 du code de la consommation. 
+qui ont été constatés par les agents mentionnés aux articles L. 511-3 et L. 511-21 du code de la consommation, dans les
+conditions prévues à l'article L. 511-7 du même code.
 
 II. ― L'autorité administrative chargée de la concurrence et de la consommation est l'autorité compétente pour prononcer,
-dans les conditions prévues à l'article L. 141-1-2 du code de la consommation, les amendes administratives mentionnées au I
-du présent article.
+dans les conditions prévues au chapitre II du titre II du livre V du code de la consommation, les amendes administratives
+mentionnées au I du présent article.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Loi n°2014-344 du 17 mars 2014 - art. 116
+	  - Ordonnance n°2016-301 du 14 mars 2016 - art. 20
 
 	**Cite**:
 
-	  - Code de la consommation - art. L141-1
-	  - Code de la consommation - art. L141-1-2
+	  - Code de la consommation
+	  - Code de la consommation - art. L511-21
+	  - Code de la consommation - art. L511-3
 
 	**Cité par**:
 
