--- a/02. PARTIE REGLEMENTAIRE/Article R1331-4 - 28996731.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1331-4 - 28996731.md
@@ -1,28 +1,41 @@
 # Article R1331-4
 
-En lieu et place des mentions de la déclaration prévues au 4° de l'article R. 1263-3 du code du travail, la déclaration
-comporte les mentions relatives à la durée du travail prévues, respectivement, par les articles R. 4511-1 et suivants pour la
-batellerie fluviale et par le décret n° 83-40 du 26 janvier 1983 relatif aux modalités d'application des dispositions du code
-du travail concernant la durée du travail dans les entreprises de transport routier de marchandises et le décret n° 2003-1242
-du 22 décembre 2003 modifié relatif à la durée du travail dans les entreprises de transport routier de personnes.
+I.-Le représentant de l'entreprise conserve et présente les documents suivants à la demande des agents de contrôle mentionnés
+à l'article L. 8271-1-2 du code du travail : 
+
+1° Les bulletins de paie correspondant à la période du détachement de chaque salarié détaché ou tout document équivalent
+attestant de la rémunération et comportant les mentions suivantes : 
+
+a) Salaire horaire brut, y compris les majorations pour les heures supplémentaires, converti en euros ; 
+
+b) Période et horaires de travail auxquels se rapporte le salaire en distinguant les heures payées au taux normal et celles
+comportant une majoration ; 
+
+c) Congés et jours fériés et éléments de rémunération s'y rapportant ; 
+
+2° Tout document attestant du paiement effectif du salaire ; 
+
+3° La copie de la désignation par l'entreprise de son représentant conformément aux dispositions de l'article R. 1263-2-1 du
+code du travail ; 
+
+4° S'il y a lieu, l'intitulé de la convention collective de branche applicable au salarié. 
+
+II.-Dans le cas où l'entreprise détachant un salarié roulant ou navigant sur le territoire français est établie en dehors de
+l'Union européenne, le document atteste de la régularité de sa situation sociale au regard d'une convention internationale de
+sécurité sociale ou, à défaut, joint l'attestation de fourniture de déclaration sociale émanant de l'organisme français de
+protection sociale chargé du recouvrement des cotisations sociales lui incombant et datant de moins de six mois.
 
 **Liens relatifs à cet article**
-
-	**Cite**:
-
-	  - Décret n°83-40 du 26 janvier 1983 (V)
-	  - Décret n°2003-1242 du 22 décembre 2003 (V)
-	  - Code du travail - art. R1263-3 (V)
-	  - Code des transports - art. R4511-1 (V)
-
-	**Anciens textes**:
-
-	  - Décret n°2010-389 du 19 avril 2010 - art. 12, alinéa 4 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-418 du 7 avril 2016 - art. 1
+
+	**Cite**:
+
+	  - Code du travail - art. L8271-1-2 (V)
+	  - Code du travail - art. R1263-2-1 (V)
