--- a/02. PARTIE REGLEMENTAIRE/Article R1331-5 - 28996735.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1331-5 - 28996735.md
@@ -1,23 +1,16 @@
 # Article R1331-5
 
-Est puni de l'amende prévue pour les contraventions de la troisième classe le fait de ne pas détenir à bord une copie de la
-déclaration mentionnée à l'article R. 1331-2 ou de détenir un exemplaire non renseigné ou renseigné de façon incomplète,
-illisible, erronée ou effaçable.
+Pour l'application de l'article R. 1263-2-1 du code du travail, la période pendant laquelle est assurée la liaison entre les
+agents mentionnés à l'article L. 8271-1-2 du code du travail et le représentant sur le territoire national désigné, en
+application du II de l'article L. 1262-1 du même code par les entreprises, ne peut être inférieure à la durée du détachement
+du salarié suivie d'une période de dix-huit mois qui suit l'expiration de celle-ci.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2010-389 du 19 avril 2010 - art. 13 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
-
-	**Cite**:
-
-	  - Code des transports - art. R1331-2 (V)
+	  - Décret n°2016-418 du 7 avril 2016 - art. 1
