--- a/02. PARTIE REGLEMENTAIRE/Article R1331-1 - 28996725.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1331-1 - 28996725.md
@@ -1,26 +1,28 @@
 # Article R1331-1
 
-Les entreprises établies hors de France qui détachent un ou plusieurs salariés sur le territoire national pendant une durée
-inférieure à huit jours consécutifs pour réaliser des opérations de cabotage routier ou fluvial ne sont pas soumises à
-l'obligation de déclaration de détachement prévue aux articles R. 1263-3 à R. 1263-5 du code du travail.
+I. - Les dispositions du titre VI du livre II de la première partie du code du travail (partie réglementaire), à l'exception
+des sections 1, 2 et 3 du chapitre III, sont applicables aux entreprises, dans les conditions prévues au présent chapitre.
+
+Par entreprise au sens du présent chapitre, sont entendues toutes entreprises établies hors de France entrant dans le champ
+d'activité mentionné à l'article L. 1321-1, dès lors que sont remplies les conditions de détachement prévues à l'article L.
+1262-1 ou à l'article L. 1262-2 du code du travail.
+
+II. - L'entreprise désigne en ce cas son représentant sur le territoire national en application du II de l'article L.
+1262-2-1 du même code.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2010-389 du 19 avril 2010 - art. 11 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-418 du 7 avril 2016 - art. 1
 
 	**Cite**:
 
-	  - Code du travail - art. R1263-3 (V)
+	  - Code du travail - art. R1263-3
 
 	**Cité par**:
 
