--- a/02. PARTIE REGLEMENTAIRE/Article R1331-2 - 28996727.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1331-2 - 28996727.md
@@ -1,25 +1,50 @@
 # Article R1331-2
 
-Les entreprises établies hors de France qui détachent un ou plusieurs salariés sur le territoire national pendant une durée
-égale ou supérieure à huit jours consécutifs pour réaliser des opérations de cabotage routier ou fluvial sont soumises à
-l'obligation de déclaration de détachement prévue aux articles R. 1263-3 à R. 1263-5 du code du travail. 
+I.-Lorsque sont réunies sur le territoire français les conditions prévues aux articles L. 1262-1 et L. 1262-2 du code du
+travail pour le détachement d'un salarié roulant ou navigant, l'entreprise remplit, dans les conditions précisées à l'article
+R. 1331-8, pour chaque salarié détaché une attestation de détachement qui se substitue à la déclaration prévue à l'article L.
+1262-2-1 du même code. 
 
-La déclaration est adressée par l'entreprise de transport non résidente à l'inspection du travail du lieu de départ de la
-première opération de cabotage. Une copie de cette déclaration est conservée à bord du véhicule ou du bateau.
+II.-Cette attestation dispense de la formalité mentionnée à l'article L. 1221-15-1 du même code dès lors que le détachement
+intervient dans les conditions prévues au 1° ou au 3° de l'article L. 1262-1 du même code et que le donneur d'ordre n'est pas
+établi en France. 
+
+III.-La durée de validité de cette attestation est celle indiquée par l'entreprise, dans la limite maximale de six mois à
+compter de sa date d'établissement. L'attestation peut couvrir plusieurs opérations de détachement relevant des dispositions
+des 1° et 3° de l'article L. 1262-1 précité, au cours de cette période. 
+
+IV.-Cette attestation est établie en langue française avant le début de la première opération de détachement. Elle est datée
+et signée et comporte : 
+
+1° Le nom ou la raison sociale ainsi que les adresses postale et électronique, les coordonnées téléphoniques de l'entreprise
+ou de l'établissement qui emploie habituellement le salarié, la forme juridique de l'entreprise, les noms, prénoms, date et
+lieu de naissance du ou des dirigeants, la désignation du ou des organismes de sécurité sociale ou assimilés auxquels
+l'entreprise verse les cotisations de sécurité sociale ou assimilées ; 
+
+2° Les nom et prénoms, les date et lieu de naissance, l'adresse de résidence habituelle, la nationalité, la date de signature
+du contrat de travail et le droit du travail applicable au contrat de travail, la qualification professionnelle du salarié
+détaché ; 
+
+3° Le taux de salaire horaire brut, converti en euros le cas échéant, ainsi que les modalités de prise en charge par
+l'entreprise de frais engagés pour l'hébergement et les repas, par jour de détachement, attribués au salarié détaché ; 
+
+4° La raison sociale ou les nom et prénom ainsi que les adresses postale et électronique, les coordonnées téléphoniques du
+représentant mentionné au II de l'article L. 1262-2-1 du code du travail ; 
+
+5° Pour les entreprises de transport routier, les références de leur immatriculation au registre électronique national des
+entreprises de transport par route prévu par l'article 16 du règlement (CE) n° 1071/2009 du Parlement européen et du Conseil
+du 21 octobre 2009 établissant les règles communes sur les conditions à respecter pour exercer la profession de transporteur
+par route, et abrogeant la directive 96/26/ CE du Conseil.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2010-389 du 19 avril 2010 - art. 12, alinéas 1 et 2 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-418 du 7 avril 2016 - art. 1
 
 	**Cité par**:
 
@@ -30,4 +55,5 @@ première opération de cabotage. Une copie de cette déclaration est conservée
 
 	**Cite**:
 
-	  - Code du travail - art. R1263-3 (V)
+	  - Code du travail - art. L1221-15-1
+	  - Code des transports - art. L1262-1
