--- a/02. PARTIE REGLEMENTAIRE/Article R1331-3 - 28996729.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1331-3 - 28996729.md
@@ -1,25 +1,32 @@
 # Article R1331-3
 
-En lieu et place des mentions de la déclaration prévues au 2° de l'article R. 1263-3 du code du travail, l'adresse à
-mentionner est celle du donneur d'ordre de la première opération de cabotage qu'il est prévu d'effectuer. La déclaration
-comporte la date de début des prestations, leur durée prévisible, les lieux de chargement et de déchargement des marchandises
-transportées ou les points de départ et de destination des différents services de transport de personnes et le numéro
-d'immatriculation du véhicule ou du bateau utilisé pour la réalisation de ces prestations.
+1° Lorsque le détachement relève du 2° de l'article L. 1262-1 ou de l'article L. 1262-2 du code du travail, l'attestation
+mentionnée à l'article R. 1331-2 comporte en outre le nom ou la raison sociale ainsi que les adresses postale et
+électronique, les coordonnées téléphoniques et le numéro d'identification SIRET de l'entreprise ou de l'établissement
+d'accueil en France du salarié détaché, la date du début du détachement et la date prévue de sa fin, les modalités de prise
+en charge par l'entreprise des frais de voyage, et le cas échéant l'adresse du ou des lieux d'hébergement du salarié ; 
+
+2° Lorsque le détachement relève de l'article L. 1262-2 du code du travail, en lieu et place des mentions prévues au 1° de
+l'article R. 1331-2, l'attestation comporte le nom ou la raison sociale ainsi que les adresses postale et électronique, les
+coordonnées téléphoniques de l'entreprise ou de l'établissement de l'entreprise de travail temporaire qui emploie
+habituellement le salarié, la forme juridique de l'entreprise, les références de son immatriculation à un registre
+professionnel ou toute autre référence équivalente, les noms, prénoms, date et lieu de naissance du ou des dirigeants, la
+désignation du ou des organismes auxquels l'entrepreneur de travail temporaire verse les cotisations de sécurité sociale
+l'identité de l'organisme auprès duquel a été obtenue une garantie financière ou une garantie équivalente dans le pays
+d'origine.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2010-389 du 19 avril 2010 - art. 12, alinéa 3 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-418 du 7 avril 2016 - art. 1
 
 	**Cite**:
 
-	  - Code du travail - art. R1263-3 (V)
+	  - Code du travail - art. L1262-1 (V)
+	  - Code du travail - art. L1262-2 (V)
+	  - Code des transports - art. R1331-2 (VT)
