--- a/02. PARTIE REGLEMENTAIRE/Article R5343-3 - 30031812.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5343-3 - 30031812.md
@@ -1,12 +1,20 @@
 # Article R5343-3
 
-Pour l'application du deuxième alinéa de l'article L. 5343-3, les ouvriers dockers occasionnels sont réputés avoir
-régulièrement travaillé sur un port lorsqu'ils ont effectué au moins cent vacations travaillées au cours des douze mois
-précédents. 
+L'ouvrier docker professionnel mensualisé qui a fait l'objet d'un licenciement dans les conditions prévues par le cinquième
+alinéa de l'article L. 5343-3 adresse au président du bureau central de la main-d'œuvre sa demande tendant à obtenir le
+maintien de sa carte professionnelle. 
 
-Leur recensement est assuré dans les grands ports maritimes par le président du directoire, dans les ports autonomes par le
-directeur du port et, dans les ports maritimes relevant des collectivités territoriales et de leurs groupements, par
-l'exécutif de la collectivité territoriale ou du groupement compétent.
+Le président saisit sans délai le bureau central de la main-d'œuvre qui recueille l'avis de l'employeur qui a prononcé le
+licenciement et invite l'ouvrier docker demandeur à présenter ses observations sur cet avis. 
+
+Le bureau central de la main-d'œuvre statue dans le mois qui suit la réception de la demande. Pour prendre sa décision il
+tient compte du motif du licenciement, de l'ancienneté de l'intéressé déterminée à partir de la date d'attribution de sa
+carte professionnelle, de ses charges de famille, de ses perspectives de réinsertion professionnelle, de son aptitude
+professionnelle, ainsi que du taux d'inemploi des ouvriers dockers professionnels intermittents. Toute décision de refus doit
+être motivée. 
+
+La décision du bureau central de la main-d'œuvre est notifiée par son président à l'intéressé par lettre recommandée avec
+demande d'avis de réception.
 
 **Liens relatifs à cet article**
 
@@ -14,22 +22,14 @@ l'exécutif de la collectivité territoriale ou du groupement compétent.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Liens**:
-
-	  - TRANSFERE: Décret n°2016-951 du 11 juillet 2016 - art. 1
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R511-2-1 (Ab)
+	  - Décret n°2016-951 du 11 juillet 2016 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. L5343-3 (V)
+	  - Code des transports - art. L5343-3
 
-	**Nouveaux textes**:
+	**Anciens textes**:
 
-	  - Code des transports - art. R5343-2 (V)
+	  - Code des transports - art. R5343-4 (T)
