--- a/02. PARTIE REGLEMENTAIRE/Article R5343-1 - 30031808.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5343-1 - 30031808.md
@@ -1,7 +1,18 @@
 # Article R5343-1
 
-La liste des ports prévue à l'article L. 5343-1 est fixée par arrêté conjoint du ministre chargé des ports maritimes et du
-ministre chargé du travail.
+En application du premier alinéa de l'article L. 5343-7 du code des transports, dans les ports maritimes de commerce, pour
+les marchandises en provenance ou à destination de la voie maritime, les opérations de chargement et de déchargement des
+navires et des bateaux, y compris la mise et la reprise de ces marchandises sous hangar et sur terre-plein, qui en sont le
+préalable ou la suite nécessaire, sont, sous les réserves indiquées à l'alinéa suivant, effectuées prioritairement par des
+ouvriers dockers appartenant à l'une des catégories définies à l'article L. 5343-2. 
+
+Par dérogation aux dispositions qui précèdent, peuvent être effectuées, sans avoir recours à la main-d'œuvre des ouvriers
+dockers, les opérations suivantes : déchargement ou chargement du matériel de bord des navires et des bateaux et
+avitaillement de ceux-ci, déchargement ou chargement des bateaux par les moyens du bord ou par le propriétaire de la
+marchandise au moyen des personnels de son entreprise, manutentions liées à un chantier de travaux publics sur le port
+considéré, reprise sur terre-pleins ou sous hangars et chargement sur wagons ou camions par le personnel du propriétaire de
+la marchandise, déchargement du poisson des navires et bateaux de pêche par l'équipage ou le personnel de l'armateur,
+déchargement ou chargement des produits liquides transportés par des navires ou bateaux pétroliers, chimiquiers et gaziers.
 
 **Liens relatifs à cet article**
 
@@ -9,14 +20,14 @@ ministre chargé du travail.
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R511-1 (Ab)
+	  - Décret n°2016-951 du 11 juillet 2016 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. L5343-1 (V)
+	  - Code des transports - art. L5343-1
+
+	**Anciens textes**:
+
+	  - Code des transports - art. R5343-2 (T)
