--- a/02. PARTIE REGLEMENTAIRE/Article R5343-2 - 30031810.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5343-2 - 30031810.md
@@ -1,18 +1,12 @@
 # Article R5343-2
 
-En application de l'article L. 5343-7, dans les ports figurant sur la liste prévue à l'article L. 5343-1, les opérations de
-chargement et de déchargement des navires et des bateaux aux postes publics sont, sous les réserves indiquées au deuxième
-alinéa, effectuées par des ouvriers dockers appartenant à l'une des catégories définies à l'article L. 5343-2. Il en est de
-même des opérations effectuées dans des lieux à usage public, tels que terre-pleins, hangars ou entrepôts, situés à
-l'intérieur des limites du domaine public maritime et portant sur des marchandises en provenance ou à destination de la voie
-maritime. 
+Pour l'application du troisième alinéa de l'article L. 5343-3, les ouvriers dockers occasionnels sont réputés avoir
+régulièrement travaillé sur un port lorsqu'ils ont effectué au moins cent vacations travaillées au cours des douze mois
+précédents. 
 
-Par dérogation aux dispositions qui précèdent, peuvent être effectuées, sans avoir recours à la main-d'œuvre des ouvriers
-dockers, les opérations suivantes : déchargement ou chargement du matériel de bord des navires et des bateaux et
-avitaillement de ceux-ci, déchargement ou chargement des bateaux par les moyens du bord ou par le propriétaire de la
-marchandise au moyen des personnels de son entreprise, manutentions liées à un chantier de travaux publics sur le port
-considéré, reprise sur terre-pleins ou sous hangars et chargement sur wagons ou camions par le personnel du propriétaire de
-la marchandise, déchargement du poisson des navires et bateaux de pêche par l'équipage ou le personnel de l'armateur.
+Leur recensement est assuré dans les grands ports maritimes par le président du directoire, dans les ports autonomes par le
+directeur du port et, dans les ports maritimes relevant des collectivités territoriales et de leurs groupements, par
+l'exécutif de la collectivité territoriale ou du groupement compétent.
 
 **Liens relatifs à cet article**
 
@@ -20,28 +14,20 @@ la marchandise, déchargement du poisson des navires et bateaux de pêche par l'
 
 	  - Décret n°2014-1670 du 30 décembre 2014 - art.
 
-	**Créé par**:
-
-	  - Décret n°2014-1670 du 30 décembre 2014 - art.
-
 	**Cité par**:
 
 	  - Décret n°2016-951 du 11 juillet 2016 (V)
 
-	**Liens**:
+	**Modifié par**:
 
-	  - TRANSFERE: Décret n°2016-951 du 11 juillet 2016 - art. 1
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. R511-2 (Ab)
+	  - Décret n°2016-951 du 11 juillet 2016 - art. 1
 
 	**Cite**:
 
-	  - Code des transports - art. L5343-1 (V)
-	  - Code des transports - art. L5343-2 (V)
-	  - Code des transports - art. L5343-7 (V)
+	  - Code des transports - art. L5343-1
+	  - Code des transports - art. L5343-2
+	  - Code des transports - art. L5343-7
 
-	**Nouveaux textes**:
+	**Anciens textes**:
 
-	  - Code des transports - art. R5343-1 (V)
+	  - Code des transports - art. R5343-3 (T)
