--- a/01. PARTIE LEGISLATIVE/Article L1213-3-1 - 28528787.md
+++ b/01. PARTIE LEGISLATIVE/Article L1213-3-1 - 28528787.md
@@ -1,29 +1,12 @@
 # Article L1213-3-1
 
-Le schéma régional de l'intermodalité coordonne à l'échelle régionale, en l'absence d'une autorité organisatrice de transport
-unique et dans le respect de l'article L. 1221-1, les politiques conduites en matière de mobilité par les collectivités
-publiques mentionnées à ce même article, en ce qui concerne l'offre de services, l'information des usagers, la tarification
-et la billettique. 
-
-Ce schéma assure la cohérence des services de transport public et de mobilité offerts aux usagers sur le territoire régional
-dans l'objectif d'une complémentarité des services et des réseaux, dans le respect des compétences de chacune des autorités
-organisatrices de transport du territoire. Il assure la coordination des services de transport organisés par les différentes
-autorités organisatrices de transport au sein des agglomérations de plus de 100 000 habitants, au sens de l'article L. 221-2
-du code de l'environnement. 
-
-Il définit les principes guidant l'articulation entre les différents modes de déplacement, notamment en ce qui concerne la
-mise en place de pôles d'échange. Il tient compte, en particulier, des besoins de déplacement quotidien entre le domicile et
-le lieu de travail et assure la cohérence des dispositions des plans de déplacements urbains élaborés sur des périmètres de
-transport urbain limitrophes.
-
-Il prévoit les mesures de nature à assurer une information des usagers sur l'ensemble de l'offre de transports, à permettre
-la mise en place de tarifs donnant accès à plusieurs modes de transport et la distribution des billets correspondants. 
-
-Le schéma régional de l'intermodalité comporte un schéma régional des gares routières qui coordonne l'action des
-collectivités concernées. Notamment, il identifie les pôles d'échanges stratégiques pour l'intégration de ceux des
-aménagements destinés à faciliter la prise en charge et la dépose des passagers des services de transport relevant du service
-public et fixe les objectifs d'aménagements nécessaires à la mise en œuvre de connexions entre les différents réseaux de
-transport et modes de déplacement, en particulier les modes non polluants.
+Le schéma régional d'aménagement, de développement durable et d'égalité des territoires et le plan d'aménagement et de
+développement durable de la Corse prévus respectivement par les articles 
+L. 4251-1
+et 
+L. 4424-9
+du code général des collectivités territoriales mettent en œuvre la coordination ainsi que les objectifs d'aménagement prévus
+par la planification régionale de l'intermodalité au sens de l'article L. 1213-3.
 
 **Liens relatifs à cet article**
 
@@ -36,9 +19,9 @@ transport et modes de déplacement, en particulier les modes non polluants.
 
 	**Modifié par**:
 
-	  - Ordonnance n°2016-79 du 29 janvier 2016 - art. 1
+	  - Ordonnance n°2016-1028 du 27 juillet 2016 - art. 2
 
 	**Cite**:
 
-	  - Code de l'environnement - art. L221-2
-	  - Code des transports - art. L1221-1
+	  - Code général des collectivités territoriales - art. L4251-1
+	  - Code général des collectivités territoriales - art. L4424-9
