--- a/01. PARTIE LEGISLATIVE/Article L1213-4 - 23086225.md
+++ b/01. PARTIE LEGISLATIVE/Article L1213-4 - 23086225.md
@@ -1,13 +1,17 @@
 # Article L1213-4
 
-Les dispositions propres au schéma régional des infrastructures et des transports de la région Ile-de-France sont énoncées au
-deuxième alinéa de l'article L. 4413-3 du code général des collectivités territoriales.
+Les dispositions propres à la planification régionale des infrastructures de transport de la région Ile-de-France sont
+énoncées au deuxième alinéa de l'article L. 4413-3 du code général des collectivités territoriales.
 
 **Liens relatifs à cet article**
 
+	**Modifié par**:
+
+	  - Ordonnance n°2016-1028 du 27 juillet 2016 - art. 3
+
 	**Cite**:
 
-	  - Code général des collectivités territoriales - art. L4413-3 (V)
+	  - Code général des collectivités territoriales - art. L4413-3
 
 	**Codifié par**:
 
