--- a/01. PARTIE LEGISLATIVE/Article L1213-5 - 23086220.md
+++ b/01. PARTIE LEGISLATIVE/Article L1213-5 - 23086220.md
@@ -1,7 +1,7 @@
 # Article L1213-5
 
-Les dispositions propres au schéma régional des infrastructures et des transports et au schéma régional de l'intermodalité de
-la collectivité territoriale de Corse sont énoncées au II de l'article L. 4424-10du code général des collectivités
+Les dispositions propres à la planification régionale des infrastructures de transport et de l'intermodalité de la
+collectivité territoriale de Corse sont énoncées au II de l'article L. 4424-10du code général des collectivités
 territoriales.
 
 **Liens relatifs à cet article**
@@ -12,8 +12,8 @@ territoriales.
 
 	**Modifié par**:
 
-	  - Loi n°2014-58 du 27 janvier 2014 - art. 6
+	  - Ordonnance n°2016-1028 du 27 juillet 2016 - art. 3
 
 	**Cite**:
 
-	  - Code général des collectivités territoriales - art. L4424-10 (V)
+	  - Code général des collectivités territoriales - art. L4424-10
