--- a/01. PARTIE LEGISLATIVE/Article L2121-3 - 23084631.md
+++ b/01. PARTIE LEGISLATIVE/Article L2121-3 - 23084631.md
@@ -10,20 +10,16 @@ ferré national, à l'exception des services d'intérêt national et des service
 Dans le respect des compétences des départements, des communes et de leurs groupements et dans celui de la cohérence et de
 l'unicité du système ferroviaire dont l'Etat est le garant, la région définit, dans son ressort territorial, le contenu du
 service public de transport régional de personnes, notamment les dessertes, la tarification, la qualité du service et
-l'information de l'usager, en tenant compte du schéma régional des infrastructures et des transports mentionné à l'article L.
-1213-1. 
+l'information de l'usager, en tenant compte de la planification régionale des infrastructures de transport au sens de la
+section 1 du chapitre III du titre Ier du livre II de la première partie du présent code. 
 
 La région définit la politique tarifaire des services d'intérêt régional en vue d'obtenir la meilleure utilisation sur le
-plan économique et social du système de transport.  Les tarifs sociaux nationaux s'appliquent aux services régionaux de
+plan économique et social du système de transport. Les tarifs sociaux nationaux s'appliquent aux services régionaux de
 personnes. 
 
 Les conditions d'application du présent article sont fixées par décret en Conseil d'Etat.
 
 **Liens relatifs à cet article**
-
-	**Codifié par**:
-
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
 
 	**Cité par**:
 
@@ -32,13 +28,5 @@ Les conditions d'application du présent article sont fixées par décret en Con
 	  - Décret n°2016-327 du 17 mars 2016 - art. 19 (V)
 	  - Code des transports - art. L2121-2 (VD)
 	  - Code des transports - art. L2121-6 (VD)
-	  - Code des transports - art. L2141-19 (VD)
+	  - Code des transports - art. L2141-19 (V)
 	  - Code général des impôts, CGI. - art. 302 bis ZC (VD)
-
-	**Modifié par**:
-
-	  - Loi n°2014-872 du 4 août 2014 - art. 15
-
-	**Cite**:
-
-	  - Code des transports - art. L1213-1
