--- a/01. PARTIE LEGISLATIVE/Article L2123-4 - 23084558.md
+++ b/01. PARTIE LEGISLATIVE/Article L2123-4 - 23084558.md
@@ -7,8 +7,9 @@ différents modes de déplacement. Il prend en compte les possibilités d'embarq
 Il programme la réalisation des travaux correspondants et comporte, à ce titre, un plan de financement. Ce plan est élaboré
 par SNCF Mobilités, en concertation avec les collectivités territoriales et leurs groupements concernés. 
 
-Il est compatible avec le schéma régional de l'intermodalité prévu à l'article L. 1213-3-1 et le plan de déplacements urbains
-prévu à l'article L. 1214-1, lorsqu'ils existent. 
+Il est compatible avec la planification régionale de l'intermodalité au sens de la section 2 du chapitre III du titre Ier du
+livre II de la première partie du présent code et avec le plan de déplacements urbains prévu à l'article L. 1214-1,
+lorsqu'ils existent. 
 
 II.-Le plan prévu au présent article est élaboré dans un délai de trois ans à compter de la promulgation de la loi n°
 2014-872 du 4 août 2014 portant réforme ferroviaire.
@@ -21,15 +22,14 @@ II.-Le plan prévu au présent article est élaboré dans un délai de trois ans
 
 	**Cite**:
 
-	  - Loi n°2014-872 du 4 août 2014 (VD)
+	  - Loi n°2014-872 du 4 août 2014
 	  - Code des transports - art. L1213-3-1
 	  - Code des transports - art. L1214-1
 
 	**Modifié par**:
 
-	  - Loi n°2014-872 du 4 août 2014 - art. 12
+	  - Ordonnance n°2016-1028 du 27 juillet 2016 - art. 3
 
 	**Cité par**:
 
-	  - Code des transports - art. L2123-5 (VT)
 	  - Code des transports - art. L2141-1 (V)
