--- a/01. PARTIE LEGISLATIVE/Article L1213-2 - 23086250.md
+++ b/01. PARTIE LEGISLATIVE/Article L1213-2 - 23086250.md
@@ -1,17 +1,27 @@
 # Article L1213-2
 
-La région est chargée de son élaboration, en association avec l'Etat, dans le respect des compétences des départements, et en
-concertation avec les communes ainsi que leurs groupements.
+Le document de planification régionale des infrastructures de transport de la région d'Ile-de-France, le schéma régional
+d'aménagement, de développement durable et d'égalité des territoires et le plan d'aménagement et de développement durable de
+la Corse prévus respectivement par les articles 
+L. 4413-3
+, 
+L. 4251-1
+et 
+L. 4424-9
+du code général des collectivités territoriales mettent en œuvre les objectifs de la planification régionale des
+infrastructures de transport au sens de l'article L. 1213-1.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 14-1 (VT), alinéa 2, paragraphe I
+	  - Ordonnance n°2016-1028 du 27 juillet 2016 - art. 2
 
-	**Abrogé par**:
+	**Cite**:
 
-	  - Loi n°2015-991 du 7 août 2015 - art. 10
+	  - Code général des collectivités territoriales - art. L4251-1
+	  - Code général des collectivités territoriales - art. L4413-3 (V)
+	  - Code général des collectivités territoriales - art. L4424-9
 
 	**Codifié par**:
 
