--- a/01. PARTIE LEGISLATIVE/Article L1213-3 - 23086239.md
+++ b/01. PARTIE LEGISLATIVE/Article L1213-3 - 23086239.md
@@ -1,26 +1,24 @@
 # Article L1213-3
 
-Le schéma mentionné à l'article L. 1213-1 a pour objectif prioritaire de rendre plus efficace l'utilisation des réseaux et
-des équipements existants et de favoriser la complémentarité entre les modes de transport ainsi que la coopération entre les
-opérateurs, en prévoyant la réalisation d'infrastructures nouvelles lorsqu'elles sont nécessaires. 
+En l'absence d'une autorité organisatrice de transport unique, les politiques conduites en matière de mobilité par les
+collectivités territoriales et leurs groupements au titre de l'article L. 1221-1 sont coordonnées à l'échelle régionale en ce
+qui concerne l'offre de services, l'information des usagers, la tarification et la billettique, en tenant compte notamment
+des besoins de déplacement quotidien entre le domicile et le lieu de travail. 
 
-Il détermine, selon une approche intégrant les différents modes de transport et leur combinaison, les objectifs des services
-de transport offerts aux usagers, les modalités de leur mise en œuvre ainsi que les critères de sélection des actions qu'il
-préconise.
+La planification régionale de l'intermodalité comprend les modalités de coordination de l'action des collectivités et de
+leurs groupements concernés, relatives aux pôles d'échanges stratégiques entrant dans le champ de l'article L. 3114-1 et
+relevant du service public et les objectifs d'aménagements nécessaires à la mise en œuvre de connexions entre les différents
+réseaux de transport et modes de déplacement, en particulier les modes non polluants.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 14-1 (VT), alinéas 4 et 5 (début de la phrase), paragraphe II
-
-	**Abrogé par**:
-
-	  - Loi n°2015-991 du 7 août 2015 - art. 10
+	  - Ordonnance n°2016-1028 du 27 juillet 2016 - art. 2
 
 	**Cite**:
 
-	  - Code des transports - art. L1213-1 (M)
+	  - Code des transports - art. L3114-1
 
 	**Cité par**:
 
