--- a/01. PARTIE LEGISLATIVE/Article L1213-3-2 - 28528800.md
+++ b/01. PARTIE LEGISLATIVE/Article L1213-3-2 - 28528800.md
@@ -1,35 +1,42 @@
 # Article L1213-3-2
 
-Sous réserve des dispositions particulières prévues à la section 3 du présent chapitre, le schéma régional de l'intermodalité
-est élaboré par la région, en collaboration avec les départements et les autorités organisatrices de la mobilité situées sur
-le territoire régional. 
+La planification régionale de l'intermodalité peut être complétée par des plans de mobilité rurale afin de prendre en compte
+les spécificités des territoires à faible densité démographique et d'y améliorer la mise en œuvre du droit au transport, au
+sens du chapitre Ier du titre Ier du livre Ier de la présente partie, notamment en veillant à la complémentarité entre les
+transports collectifs, les usages partagés des véhicules terrestres à moteur et les modes de déplacement terrestres non
+motorisés. 
 
-Le projet de schéma fait ensuite l'objet d'une concertation avec l'Etat et, le cas échéant, avec les syndicats mixtes de
-transport mentionnés à l'article L. 1231-10 du présent code. Les établissements publics mentionnés à l'article L. 143-16 du
-code de l'urbanisme et les gestionnaires de voirie sont consultés à leur demande sur le projet de schéma. 
+Le plan de mobilité rurale est élaboré à l'initiative d'un établissement public mentionné aux a à c de l'article L. 143-16 du
+code de l'urbanisme ou, à défaut, par un pôle d'équilibre territorial et rural. Le plan couvre tout ou partie du territoire
+de l'établissement public qui l'élabore. 
 
-Le projet de schéma régional de l'intermodalité, assorti des avis des conseils départementaux des départements inclus dans la
-région, des autorités organisatrices de la mobilité ainsi que des observations formulées par les personnes associées à son
-élaboration, est mis à la disposition du public dans les conditions prévues à l'article L. 120-1 du code de l'environnement. 
+Le plan de mobilité rurale prend en compte les plans de mobilité des entreprises, des personnes publiques et des
+établissements scolaires applicables sur le territoire qu'il couvre. 
 
-Le projet est arrêté par le conseil régional après avis favorable des organes délibérants des autorités organisatrices de la
-mobilité représentant au moins la moitié de la population des ressorts territoriaux de ces dernières dans la région. 
+Le projet de plan arrêté par l'organe délibérant de l'établissement public est soumis pour avis au conseil régional, aux
+conseils départementaux et aux autorités organisatrices de la mobilité concernés. 
 
-En l'absence de réponse de la collectivité publique dans un délai de trois mois à compter de la transmission du projet de
-schéma, son avis est réputé favorable. 
+Les représentants des professions et des usagers des transports, les gestionnaires de voirie, les chambres consulaires et les
+associations agréées de protection de l'environnement sont consultés, à leur demande. 
 
-Le schéma régional de l'intermodalité est approuvé par le représentant de l'Etat dans la région. 
+Le projet de plan, assorti des avis recueillis, est mis à la disposition du public, dans les conditions prévues à l'article
+L. 120-1 du code de l'environnement. 
 
-Il fait l'objet d'une évaluation tous les cinq ans et il est, si nécessaire, révisé.
+Eventuellement modifié pour tenir compte des résultats de la consultation du public et des avis des personnes mentionnées aux
+quatrième et cinquième alinéas du présent article, le plan est arrêté par l'organe délibérant de l'établissement public.
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - ORDONNANCE n°2015-1174 du 23 septembre 2015 - art. 9
+	  - Ordonnance n°2016-1028 du 27 juillet 2016 - art. 2
 
 	**Cite**:
 
-	  - Code de l'urbanisme - art. L143-16 (VD)
+	  - Code de l'urbanisme - art. L143-16
 	  - Code de l'environnement - art. L120-1
 	  - Code des transports - art. L1231-10
+
+	**Anciens textes**:
+
+	  - Code des transports - art. L1213-3-4 (T)
