--- a/02. PARTIE REGLEMENTAIRE/Article R1331-9 - 32379928.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1331-9 - 32379928.md
@@ -6,11 +6,11 @@ Est puni de l'amende prévue pour les contraventions de la quatrième classe :
 moyen de transport avec lequel est assuré le service ;
 
 2° Le fait pour un chef d'entreprise que l'attestation de détachement détenue à bord du moyen de transport avec lequel est
-assuré le service ne soit pas conforme aux prescriptions de l'article R. 1331-1 et de l'arrêté pris pour son application ou
-qu'elle comporte une mention incomplète, erronée, illisible ou effaçable.
+assuré le service ne soit pas conforme aux prescriptions de l'article R. 1331-2 et de l'arrêté pris pour l'application de
+l'article R. 1331-8 ou qu'elle comporte une mention incomplète, erronée, illisible ou effaçable.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2016-418 du 7 avril 2016 - art. 1
+	  - Décret n°2016-1044 du 29 juillet 2016 - art. 8
