--- a/02. PARTIE REGLEMENTAIRE/Article R1213-2 - 28996359.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1213-2 - 28996359.md
@@ -1,23 +1,20 @@
 # Article R1213-2
 
-Les objectifs déterminés en application du deuxième alinéa de l'article L. 1213-3 visent notamment à assurer la cohérence à
-long terme entre et à l'intérieur des réseaux définis pour les différents modes de transport et à fixer les priorités en
-matière d'exploitation, de modernisation, d'adaptation et d'extension de ces réseaux.
+Les objectifs déterminés en application des articles L. 1213-1 et L. 1213-3 portent sur le transport de personnes et le
+transport de marchandises. Ils visent notamment à assurer la cohérence à long terme à l'intérieur des réseaux définis pour
+les différents modes de transport et entre ces réseaux et à permettre une meilleure utilisation des réseaux ainsi que
+l'amélioration de leurs connexions et de la qualité du matériel.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 14-1, 5e alinéa, paragraphe II, fin de phrase  (VT)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-1071 du 3 août 2016 - art. 3
 
 	**Cite**:
 
-	  - Code des transports - art. L1213-3 (V)
+	  - Code des transports - art. L1213-3
