--- a/02. PARTIE REGLEMENTAIRE/Article R1213-1 - 28996357.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1213-1 - 28996357.md
@@ -1,24 +1,19 @@
 # Article R1213-1
 
-Le schéma régional des infrastructures et des transports mentionné à l'article L. 1213-1 assure la cohérence sur le plan
-régional et interrégional des services ferroviaires régionaux de voyageurs et des services ferroviaires offerts sur les
-itinéraires à grande circulation et la cohérence de leurs fonctionnalités dans une approche multimodale. En ce qui concerne
-les infrastructures routières, il définit les priorités d'action à moyen et à long terme sur son territoire.
+La planification régionale mentionnée aux articles L. 1213-1 et L. 1213-3 vise à répondre aux évolutions prévisibles de la
+demande de transport, ainsi qu'à celles des besoins liés à la mise en œuvre du droit au transport prévu par les articles L.
+1111-1 et L. 1111-2.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 14-1, alinéa 3, paragraphe I (VT)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2016-1071 du 3 août 2016 - art. 3
 
 	**Cite**:
 
-	  - Code des transports - art. L1213-1 (V)
+	  - Code des transports - art. L1213-1
