--- a/02. PARTIE REGLEMENTAIRE/Article R1213-3 - 28996361.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R1213-3 - 28996361.md
@@ -1,37 +1,25 @@
 # Article R1213-3
 
-Pour atteindre l'objectif prioritaire défini à l'article L. 1213-3, les schémas régionaux des infrastructures et des
-transports : 
+La planification régionale de l'intermodalité et de développement des transports prévue à l'article L. 1213-3 détermine en
+particulier :
 
-1° Evaluent les évolutions prévisibles de la demande de transport ainsi que celles des besoins liés à la mise en œuvre du
-droit au transport tel que défini à l'article L. 1111-2 et définissent les moyens permettant d'y répondre dans des conditions
-économiques, sociales et environnementales propres à contribuer au développement durable du territoire et notamment à la
-lutte contre l'effet de serre ; 
+- les mesures de nature à favoriser la cohérence des services de transport public et de mobilité et la cohérence
+infrarégionale des plans de déplacements urbains limitrophes ;
 
-2° Comprennent notamment une analyse globale des effets des différents modes de transport et, à l'intérieur de chaque mode de
-transport, des effets des différents équipements, matériels et mesures d'exploitation utilisés sur l'environnement, la
-sécurité et la santé ; 
+- les mesures de nature à assurer une information des usagers sur l'ensemble de l'offre de transports, à permettre la mise en
+place de tarifs donnant accès à plusieurs modes de transport et la distribution des billets correspondants ;
 
-3° Récapitulent les principales actions à mettre en œuvre dans les différents modes de transport pour permettre une meilleure
-utilisation des réseaux existants, l'amélioration de leurs connexions et de la qualité du matériel et la création
-d'infrastructures nouvelles. Ils prennent en compte les orientations de l'Union européenne en matière de réseaux de
-transports.
+- les modalités de coordination de l'action des collectivités territoriales et de leurs groupements, relatives aux pôles
+d'échanges stratégiques entrant dans le champ de l'article L. 3114-1, ainsi que l'identification des aménagements nécessaires
+à la mise en œuvre des connexions entre les différents réseaux de transport et modes de déplacements, en particulier les
+modes non polluants.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 14-1, alinéas 6 à 8, paragraphe II (VT)
 
 	**Codifié par**:
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
-
-	**Cite**:
-
-	  - Code des transports - art. L1111-2 (V)
-	  - Code des transports - art. L1213-3 (V)
+	  - Décret n°2016-1071 du 3 août 2016 - art. 3
